# Acitx-Prisma

./: .env  Cargo.toml  dev.db
prisma/: dev.db  dev.db-journal  schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230728161258_init/: migration.sql
src/: main.rs  prisma.rs  secret.key
src/constants/: constants.rs
src/middleware/: auth_middleware.rs
src/task/: api.rs  model.rs
src/user/: model.rs  user.rs
src/utils/: jwt_token_utils.rs  mod.rs  scheduler.rs
