[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["prisma-cli"]


[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
actix-rt = "2.7.0"
chrono = "0.4.26"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false,features=["sqlite"] }
actix-jwt-auth-middleware = "0.3.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
actix-web-validator = "5.0.1"
validator = { version = "0.15", features = ["derive"] }

# schedule tasks in tokio runtime
tokio_schedule = "0.3.0"